# skytrack

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi-publish.yml
docs/: index.md
examples/: hf_trainer_orpo.py  pure_pytorch.py
examples/sweep/: sky_orpo_tune.yaml
skypilot/: skytrack_single.yaml  skytrack_sweep.yaml
skytrack/: __init__.py  artifacts.py  callbacks.py  cli.py  config.py  logging.py  monitor.py  sweep.py
tests/: test_artifacts.py  test_cli.py  test_logging.py
